fixing some bugs, adding new features, adding new sounds, add Unit Test and refactoring